<resources>
    <string name="app_name">签到</string>
    <string name="btn_scan">扫描</string>
    <string name="btn_import">导入</string>
    <string name="btn_export">导出</string>
    <string name="btn_mark">录奖</string>
    <string name="btn_exchange">兑奖</string>
    <string name="sign">已签到</string>
    <string name="result">%1$s 签到成功</string>
    <string name="duplicate">%1$s 重复签到</string>
    <string name="no_prize">%1$s 未中奖</string>
    <string name="has_prize">%1$s 获得 %2$s</string>
    <string name="exchanged">%1$s 已领取 %2$s</string>
    <string name="hint_prize">请输入奖项</string>
    <string name="btn_search">查询</string>
    <string name="count">未领奖人数%1$d个</string>
    <string name="count_record">已录入%1$d人</string>
</resources>
