<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".bike.ui.MarkActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_mark"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/v_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingLeft="@dimen/standard_padding"
            android:onClick="onClickBack"
            android:tint="@color/main_red"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/tv_title"
            app:srcCompat="@drawable/ic_back_black" />

        <EditText
            android:id="@+id/et_prize"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/stroke_black"
            android:gravity="center"
            android:hint="@string/hint_prize"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_prize" />

        <Button
            android:id="@+id/tv_scan"
            style="@style/TextButton"
            android:onClick="onClickScan"
            android:text="@string/btn_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_result" />
    </android.support.constraint.ConstraintLayout>
</layout>